--- a/sections/section_2_1.html
+++ b/sections/section_2_1.html
@@ -14,10 +14,13 @@
                 <img id='audio2_1on' src="../images/audio_on.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
                 <img id='audio2_1off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
             </div>
-            <h1>Types of Anxious Thoughts</h>
+            <h1>Types of Anxious Thinking </h>
         </div>
         <!-- /header -->
         <div data-role="content">
+            <h2> Section 2: Anxious Thinking </h2>
+            <h3> Section 2.1 Types of Anxious Thoughts </h3>
+
             <p>
                 We are all familiar with basic types of anxious thinking, such as:
             </p>
