--- a/sections/section_2_2.html
+++ b/sections/section_2_2.html
@@ -14,7 +14,7 @@
                 <img id='audio2_2on' src="../images/audio_on.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
                 <img id='audio2_2off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
             </div>
-            <h1>Types of Anxious Thoughts Cont’d</h>
+            <h1>Types of Anxious Thinking Cont'd</h>
         </div>
         <!-- /header -->
         <div data-role="content">
