--- a/sections/section_3_1.html
+++ b/sections/section_3_1.html
@@ -13,10 +13,12 @@
                 <img id='audio3_1on' src="../images/audio_on.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
                 <img id='audio3_1off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
             </div>
-            <h1>Defusion Strategies </h1>
+            <h1>Defusion Strategies</h1>
         </div>
         <!-- /header -->
         <div data-role="content">
+            <h2>Section 3: Defusing from Your Social Anxiety Thoughts  </h2>
+            <h3>Section 3.1 Defusion Strategies </h3>
             <p>
                 Here, we provide details about the strategies that are particularly helpful in defusing from the socially anxious mind. 
                 As you read through them, keep in mind that defusion strategies are not intended to belittle or ridicule your thought processes; they are meant to help you get some distance from your thoughts, notice the process of thinking, and liberate yourself from the tyranny of the fused mind.
