--- a/sections/section_3_2.html
+++ b/sections/section_3_2.html
@@ -13,7 +13,7 @@
                 <img id='audio3_2on' src="../images/audio_on.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
                 <img id='audio3_2off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
             </div>
-            <h1>Defusion Strategies Cont’d </h1>
+            <h1>Defusion Strategies Cont'd </h1>
         </div>
         <!-- /header -->
         <div data-role="content">
