--- a/sections/section_1_1.html
+++ b/sections/section_1_1.html
@@ -12,9 +12,12 @@
                 <img id='audio1_1on' src="../images/audio_on.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;' onClick='playAudio();' />
                 <img id='audio1_1off' src="../images/audio_off.png" style='position:fixed;top:7px;right:10px;height:30px;width:30px;visibility:hidden;' onClick='playAudio();' />
             </div>
-            <h1>Introduction</h1>
+            <h1> Introduction </h1>
         </div>
         <div data-role="content">
+            
+            <h2> Section 1: What is Social Anxiety? </h2>
+            <h3> Section 1.1 Introduction <h3>
             <p>
                 If you are using this app, chances are that you are one of the approximately 20 percent of adults who experience significant fear of public speaking, or one of the 15 percent who are very anxious about meeting new people. You are not alone!
                 <br>
