--- a/sections/section_5.html
+++ b/sections/section_5.html
@@ -17,6 +17,9 @@
         </div>
         <!-- /header -->
         <div data-role="content" id='section_5_body'>
+            <h2> Section 5: Summary of Defusion Strategies </h2>
+            <h3> Section 5.1 Summary of Defusion Strategies </h3>
+
             <p>
                 You have now been introduced to the basic skills of the “Defusing From Anxious Thoughts” approach to social anxiety and shyness. 
                 <br>
