dates.sethours seperate from original statement

--- a/index.html
+++ b/index.html
@@ -178,9 +178,12 @@
                 localStorage['day_5'] = 0
                 localStorage['day_6'] = 0
 
-                var first = new Date().setHours(10,0,0,0);
-                var second = new Date().setHours(15,0,0,0);
-                var third = new Date().setHours(20,0,0,0);
+                var first = new Date();
+                first.setHours(10,0,0,0);
+                var second = new Date();
+                second.setHours(15,0,0,0);
+                var third = new Date()
+                third.setHours(20,0,0,0);
 
                 
 
