--- a/index.html
+++ b/index.html
@@ -282,13 +282,16 @@
             var pPer = document.getElementById('progress_percent');
             
             var html_string = "<p> Progress Completed:"+progress/16*100+"% <br><br>Usage: "+localStorage['usage']+"</p>";
-            html_string += "<p>0: "+localStorage['day_0'] +"</p>";
-            html_string += "<p>1: "+localStorage['day_1'] +"</p>";
-            html_string += "<p>2: "+localStorage['day_2'] +"</p>";
-            html_string += "<p>3: "+localStorage['day_3'] +"</p>";
-            html_string += "<p>4: "+localStorage['day_4'] +"</p>";
-            html_string += "<p>5: "+localStorage['day_5'] +"</p>";
-            html_string += "<p>6: "+localStorage['day_6'] +"</p>";
+            if (localStorage['init_date']) {
+                html_string += "<p>1: "+localStorage['day_0'] +"</p>";
+                html_string += "<p>2: "+localStorage['day_1'] +"</p>";
+                html_string += "<p>3: "+localStorage['day_2'] +"</p>";
+                html_string += "<p>4: "+localStorage['day_3'] +"</p>";
+                html_string += "<p>5: "+localStorage['day_4'] +"</p>";
+                html_string += "<p>6: "+localStorage['day_5'] +"</p>";
+                html_string += "<p>7: "+localStorage['day_6'] +"</p>";  
+            }
+
             pPer.innerHTML = html_string;
             pBar.value = progress;
 
