--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="#popupProgress" onclick='update_progress();' data-rel="popup" data-position-to="window">Progress</a>
                 </li>
                 <li>
-                    <a href="exercises/exercise_7.html">Exercises</a>
+                    <a href="exercises/exercise_7.html">Practice Defusion</a>
                 </li>
                 <li>
                     <a href="#popuphelp" data-rel="popup" data-position-to="window">HELP</a>
