--- a/exercises/exercise_7.html
+++ b/exercises/exercise_7.html
@@ -9,7 +9,7 @@
 
     <div data-role="page" data-position="fixed" id='page'>
         <div data-role="header">
-            <h1>Exercise 7: Defusing from Your Anxious Thoughts</h1>
+            <h1>Practice Defusion</h1>
         </div>
         <!-- /header -->
 
@@ -28,13 +28,13 @@
             <div data-role="navbar" data-iconpos="right">
                 <ul>
                     <li>
-                        <a href="exercise_6.html">Previous</a>
+                        <!--<a href="exercise_6.html">Previous</a>-->
                     </li>
                     <li>
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#" class="ui-btn-active ui-state-persist">Continue</a>
+                        <!--<a href="#" class="ui-btn-active ui-state-persist">Continue</a>-->
                     </li>
                 </ul>
             </div>
