--- a/exercises/exercise_6.html
+++ b/exercises/exercise_6.html
@@ -60,7 +60,7 @@
                         <a href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#" class="ui-btn-active ui-state-persist>Continue</a>
+                        <a href="#" class="ui-btn-active ui-state-persist">Continue</a>
                     </li>
                 </ul>
             </div>
