--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>Pilot Anxiety</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     <link rel="stylesheet" href="lib/jquery.mobile-1.3.2.min.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="lib/jquery-2.0.3.min.js"></script>
